--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -1,1 +1,157 @@
 // Here you can add other styles
+/*
+ * THE Loading Overlay
+ */
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    padding-top: 3%;
+    z-index: 100000;
+}
+
+/*
+ * customize scrollbar
+ */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #212631;
+}
+
+::-webkit-scrollbar-thumb {
+    border: none;
+    background-color: #323a49;
+    border-radius: 0.2em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #323a49;
+}
+
+/*
+ * image for freight
+ */
+.image-container {
+    height: auto;
+    display: flex;
+    align-items: stretch;
+}
+
+.custom-image {
+    height: auto;
+    width: auto;
+    object-fit: cover;
+}
+
+/*
+ * timeline for tracking page
+ */
+.timeline {
+    position: relative;
+    padding: 20px;
+    max-width: 600px;
+    margin: auto;
+    border-left: 2px solid #3498db;
+}
+
+.timeline-event {
+    position: relative;
+}
+
+.timeline-event::before {
+    content: '';
+    position: absolute;
+    left: -3px;
+    top: 5px;
+    height: 10px;
+    width: 10px;
+    background-color: #3498db;
+    border-radius: 50%;
+}
+
+.timeline-date {
+    font-weight: bold;
+    padding-left: 16px;
+    color: #3498db;
+}
+
+.timeline-content {
+    margin-left: 7px;
+    padding: 10px;
+}
+
+.timeline-content h3 {
+    margin: 0;
+}
+
+.timeline-content p {
+    margin: 5px 0 0;
+}
+
+/*
+ * OTP that an O with TP
+ */
+.otp-input {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: 24px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+/*
+ * auth background
+ */
+.auth-bg {
+    background-image: url(/images/background.png);
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.5;
+}
+
+.landing-page {
+    position: relative;
+    // background-image: url(/images/freight-land.jpg); 
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.landing-page::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(39, 39, 39, 0.508);
+    filter: blur(10px);
+    z-index: 1;
+}
+
+.landing-page > * {
+    position: relative;
+    z-index: 99;
+}
+
+  .landing-page h1,
+  .landing-page p {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+  }
